// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text> hook:styler 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#191919",
        "fontFamily": undefined,
      },
      Object {
        "fontSize": 16,
      },
      undefined,
      undefined,
      undefined,
      undefined,
      Object {
        "marginBottom": 16,
      },
      undefined,
    ]
  }
/>
`;

exports[`<Text> renders 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#191919",
        "fontFamily": undefined,
      },
      Object {
        "fontSize": 16,
      },
      undefined,
      undefined,
      undefined,
      undefined,
      undefined,
    ]
  }
/>
`;

exports[`<Text> when {caption} 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#191919",
        "fontFamily": undefined,
      },
      Object {
        "fontSize": 12,
      },
      undefined,
      undefined,
      undefined,
      undefined,
      undefined,
    ]
  }
>
  Lorem Ipsum is simply dummy text of the printing and typesetting industry.
</Text>
`;

exports[`<Text> when {color} 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#191919",
        "fontFamily": undefined,
      },
      Object {
        "fontSize": 16,
      },
      undefined,
      undefined,
      undefined,
      Object {
        "color": "#e85a7e",
      },
      undefined,
    ]
  }
>
  Lorem Ipsum is simply dummy text of the printing and typesetting industry.
</Text>
`;

exports[`<Text> when {headline} 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#191919",
        "fontFamily": undefined,
      },
      Object {
        "fontSize": 32,
      },
      undefined,
      undefined,
      undefined,
      undefined,
      undefined,
    ]
  }
>
  Lorem Ipsum is simply dummy text of the printing and typesetting industry.
</Text>
`;

exports[`<Text> when {numberOfLines} 1`] = `
<Text
  numberOfLines={2}
  style={
    Array [
      Object {
        "color": "#191919",
        "fontFamily": undefined,
      },
      Object {
        "fontSize": 16,
      },
      undefined,
      undefined,
      undefined,
      undefined,
      undefined,
    ]
  }
>
  Lorem Ipsum is simply dummy text of the printing and typesetting industry.
</Text>
`;

exports[`<Text> when {style} 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#191919",
        "fontFamily": undefined,
      },
      Object {
        "fontSize": 16,
      },
      undefined,
      undefined,
      undefined,
      undefined,
      Object {
        "color": "orange",
      },
    ]
  }
>
  Lorem Ipsum is simply dummy text of the printing and typesetting industry.
</Text>
`;

exports[`<Text> when {subtitle} 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#191919",
        "fontFamily": undefined,
      },
      Object {
        "fontSize": 24,
      },
      undefined,
      undefined,
      undefined,
      undefined,
      undefined,
    ]
  }
>
  Lorem Ipsum is simply dummy text of the printing and typesetting industry.
</Text>
`;
